# inspector-gguf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.pt-BR.md  README.ru.md  build.rs  quick_profile_analysis.py
.kiro/hooks/: rust-doc-improvement.kiro.hook
.kiro/specs/changelog-versioning/: design.md  requirements.md  tasks.md
.kiro/specs/gui-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/multilingual-localization/: design.md  requirements.md  tasks.md
.kiro/specs/rustdoc-documentation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
assets/icons/: icon.icns
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  README.md  USER_GUIDE.md
examples/: cargo_version_update.rs
src/: format.rs  gui.rs  lib.rs  main.rs
src/gui/: app.rs  export.rs  layout.rs  loader.rs  mod.rs  theme.rs  updater.rs
src/gui/panels/: content.rs  dialogs.rs  mod.rs  sidebar.rs
src/localization/: detector.rs  error.rs  language.rs  loader.rs  manager.rs  mod.rs  provider.rs  settings.rs
src/versioning/: cargo_updater.rs  cli.rs  error.rs  integration_test.rs  lib.rs  mod.rs
translations/: en.json  pt-BR.json  ru.json
