[package]
name = "inspector-gguf"
version = "0.11.0"
edition = "2021"
description = "A powerful GGUF file inspection tool with a graphical and command-line interface"
license = "MIT"
repository = "https://github.com/FerrisMind/inspector-gguf"
readme = "README.md"
keywords = ["gguf", "llm", "model", "inspector", "candle"]
categories = ["command-line-utilities", "gui", "development-tools"]
authors = ["FerrisMind"]
homepage = "https://github.com/FerrisMind/inspector-gguf"

[dependencies]
candle = { version = "0.9.1", package = "candle-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
eframe = "0.32"
egui = "0.32"
rfd = "0.15"
base64 = "0.22"
csv = "1.3"
serde_yaml = "0.9"
opener = "0.8"
tokenizers = "0.15"

[features]
default = []


