[package]
name = "inspector-gguf"
version = "0.1.0"
edition = "2024"
description = "A powerful GGUF file inspection tool with a graphical and command-line interface"
license = "MIT"
repository = "https://github.com/FerrisMind/inspector-gguf"
readme = "README.md"
keywords = ["gguf", "llm", "model", "inspector", "candle"]
categories = ["command-line-utilities", "gui", "development-tools"]
authors = ["FerrisMind"]
homepage = "https://github.com/FerrisMind/inspector-gguf"

[dependencies]
candle = { version = "0.9.1", package = "candle-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
eframe = "0.32"
egui = "0.32"
egui-phosphor = "0.10"
rfd = "0.15"
base64 = "0.22"
csv = "1.3"
serde_yaml = "0.9"
opener = "0.8"
tokenizers = "0.22"
puffin = "0.19"
puffin_http = "0.16"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
pulldown-cmark = "0.13"
markdown2pdf = "0.1"

[features]
default = []

[profile.release]
# Высокая оптимизация производительности
opt-level = 3
# Link Time Optimization для лучшей оптимизации кода
lto = "thin"
# Минимальное количество codegen units для лучшей оптимизации
codegen-units = 1
# Удаление отладочной информации для уменьшения размера
strip = true
# Отключение проверки переполнения для производительности
overflow-checks = false
# Использование panic = unwind для совместимости
panic = "unwind"
# Отключение инкрементальной компиляции
incremental = false
# Отключение отладочной информации
debug = false
# Отключение debug assertions
debug-assertions = false
# Отключение rpath
rpath = false

[profile.profiling]
inherits = "release"
debug = true

