[package]
name = "inspector-gguf"
version = "0.3.0"
edition = "2024"
description = "A powerful GGUF file inspection tool with a graphical and command-line interface"
license = "MIT"
repository = "https://github.com/FerrisMind/inspector-gguf"
readme = "README.md"
keywords = ["gguf", "llm", "model", "inspector", "candle"]
categories = ["command-line-utilities", "gui", "development-tools"]
authors = ["FerrisMind"]
homepage = "https://github.com/FerrisMind/inspector-gguf"
documentation = "https://docs.rs/inspector-gguf"

# Игнорируемые зависимости для cargo-machete
[package.metadata.cargo-machete]
ignored = ["serde", "tokenizers", "winres"]

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]

# Для Windows: создаем GUI приложение без консольного окна

[build-dependencies]
winres = "0.1"

[dependencies]
candle = { version = "0.9.1", package = "candle-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
eframe = "0.32"
egui = "0.32"
egui-phosphor = "0.10"
image = { version = "0.25", features = ["png"] }
winapi = { version = "0.3", features = ["wincon", "winnls", "winnt"] }
rfd = "0.15"
base64 = "0.22"
csv = "1.3"
serde_yaml = "0.9"
opener = "0.8"
tokenizers = "0.22"
puffin = "0.19"
puffin_http = "0.16"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
pulldown-cmark = "0.13"
markdown2pdf = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
thiserror = "1.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []

[profile.release]
# Высокая оптимизация производительности
opt-level = 3
# Link Time Optimization для лучшей оптимизации кода
lto = "thin"
# Минимальное количество codegen units для лучшей оптимизации
codegen-units = 1
# Удаление отладочной информации для уменьшения размера
strip = true
# Отключение проверки переполнения для производительности
overflow-checks = false
# Использование panic = unwind для совместимости
panic = "unwind"
# Отключение инкрементальной компиляции
incremental = false
# Отключение отладочной информации
debug = false
# Отключение debug assertions
debug-assertions = false
# Отключение rpath
rpath = false

[profile.profiling]
inherits = "release"
debug = true

